Footer alignment fixed

--- a/trohar-delivery/trohar-delivery/src/main/resources/static/css/styles.css
+++ b/trohar-delivery/trohar-delivery/src/main/resources/static/css/styles.css
@@ -68,11 +68,14 @@ h1 {
 
 .footer {
   text-align: center;
-  padding: 1rem;
   background: #222;
   color: white;
   margin-top: 2rem;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
+
 .menu-container {
   padding: 2rem;
   text-align: center;
